@@ -28,6 +28,7 @@ echo "* Checking basic perf_event functionality"
 ./validation/breakpoint_support
 ./validation/inherit
 ./validation/inherit_stat
+./validation/enable_on_exec
 
 echo
 echo "* Checking bugs that PAPI has to work around"
